--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+dash = "^2.16.1"
+pandas = "^2.2.1"
 
 
 [tool.poetry.group.dev.dependencies]
